<resources>
    <string name="app_name">News App Demo</string>
    <string name="near_the">Near the</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="date">date</string>
    <string name="section_name">Section Name</string>
    <string name="thumbnail_for_the_news">Thumbnail for the news</string>
    <string name="no_news">No news found.</string>
    <string name="no_internet_connection">No internet connection</string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>
    <!-- preference label max news -->
    <string name="settings_max_news_string_label">Choose Maximum News (1 to 200)</string>
    <string name="settings_max_news_key" translatable="false">MAX_NEWS</string>
    <string name="settings_max_news_default" translatable="false">20</string>
    <!-- preference label order-by -->
    <string name="settings_order_by_string_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">ORDER_BY</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>
    <!-- label order by newest -->
    <string name="settings_order_by_newest_label">Newest News</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <!-- label order by oldest -->
    <string name="settings_order_by_oldest_label">Oldest News</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <!-- label order by relevance -->
    <string name="settings_order_by_relevance_label">Most Relevance News</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

</resources>